update prototito carrito

--- a/ecommerce/carrito.html
+++ b/ecommerce/carrito.html
@@ -45,39 +45,13 @@
                     <li class="center burger-center">
                         <p class="title-carrito">Mi carrito</p>
                     </li>
-                    <!-- <li class="burger-center">
-                        <div class="flex mi-carrito-gap mi-producto">
-                            <div class="carrito-img center">
-                                <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="$">
-                            </div>
-                            <div class="flex flex-column center mi-carrito-gap2">
-                                <div class="carrito-title">
-                                    <p></p>
-                                </div>
-                                <div class="flex flex-column center mi-carrito-gap3">
-                                    <div class="carrito-formato">
-                                        <p>Formato: <span id="carrito-for"></span></p>
-                                    </div>
-                                    <div class="carrito-cantidad">
-                                        <p>Cantidad: <span id="carrito-cant"></span></p>
-                                    </div>
-                                    <div class="carrito-subtotal">
-                                        <p>SubTotal: S/. <span id="carrito-sub"></span></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="delete center">
-                                <i class="fa-solid fa-xmark"></i>
-                            </div>
-                        </div>
-                    </li>        -->
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-        <section class="grid grid-template-carrito center producto gap-producto">
+        <section class="grid grid-template-carrito center producto gap-producto-5">
             <div class="flex item-producto gap-producto">
                 <div class="producto-img center">
                     <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
@@ -99,13 +73,13 @@
                     <div class="flex gap-producto-3">
                         <div class="flex gap-producto-4">
                             <div class="btn-minus center">
-                                <button>-</button>
+                                <button class="center">-</button>
                             </div>
                             <div class="producto-cantidad center">
                                 <p>1</p>
                             </div>
                             <div class="btn-plus center">
-                                <button>+</button>
+                                <button class="centre">+</button>
                             </div>
                         </div>
                         <div class="producto-btn center">
@@ -135,13 +109,13 @@
                     <div class="flex gap-producto-3">
                         <div class="flex gap-producto-4">
                             <div class="btn-minus center">
-                                <button>-</button>
+                                <button class="center">-</button>
                             </div>
                             <div class="producto-cantidad center">
                                 <p>1</p>
                             </div>
                             <div class="btn-plus center">
-                                <button>+</button>
+                                <button class="center">+</button>
                             </div>
                         </div>
                         <div class="producto-btn center">
@@ -171,13 +145,13 @@
                     <div class="flex gap-producto-3">
                         <div class="flex gap-producto-4">
                             <div class="btn-minus center">
-                                <button>-</button>
+                                <button class="center">-</button>
                             </div>
                             <div class="producto-cantidad center">
                                 <p>1</p>
                             </div>
                             <div class="btn-plus center">
-                                <button>+</button>
+                                <button class="center">+</button>
                             </div>
                         </div>
                         <div class="producto-btn center">
@@ -189,34 +163,7 @@
         </section>
     </main>
 
-    <!-- <ul id="mi-carrito">
-        <li>
-            <div class="flex mi-carrito-gap">
-                <div class="carrito-img center">
-                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="$">
-                </div>
-                <div class="flex flex-column center mi-carrito-gap2">
-                    <div class="carrito-title">
-                        <p></p>
-                    </div>
-                    <div class="flex flex-column center mi-carrito-gap3">
-                        <div class="carrito-formato">
-                            <p>Formato: <span id="carrito-for"></span></p>
-                        </div>
-                        <div class="carrito-cantidad">
-                            <p>Cantidad: <span id="carrito-cant"></span></p>
-                        </div>
-                        <div class="carrito-subtotal">
-                            <p>SubTotal: S/. <span id="carrito-sub"></span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul> -->
-
     <script src="js/button.js"></script>
     <script src="js/carrito.js"></script>
-    <script src="js/delete_carrito.js"></script>
 </body>
 </html>
