--- a/ecommerce/carrito.html
+++ b/ecommerce/carrito.html
@@ -169,6 +169,117 @@
                 </div>
             </div>
         </section>
+
+        <section class="grid grid-template-carrito center producto gap-producto-5">
+            <div class="flex item-producto gap-producto flex-column-producto">
+                <div class="producto-img center">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
+                </div>
+                <div class="producto-inf flex flex-column gap-producto-2">
+                    <div class="producto-name">
+                        <h2>aborigen4</h2>
+                    </div>
+                    <div class="producto-precio">
+                        <p>PEN <span class="precio">7.50</span></p>
+                    </div>
+                    <div class="producto-formato grid grid-template-column-3">
+                        <button id="btn1" class="button button-opacity" selected>unid.</button>
+                        <button id="btn2" class="button">6 unid.</button>
+                        <button id="btn3" class="button">pack 24</button>
+                        <button id="btn4" class="button">30 l</button>
+                        <button id="btn5" class="button">50 l</button>
+                    </div>
+                    <div class="flex gap-producto-3 flex-column-producto-2">
+                        <div class="flex gap-producto-4">
+                            <div class="btn-minus center">
+                                <button class="center">-</button>
+                            </div>
+                            <div class="producto-cantidad center">
+                                <p>1</p>
+                            </div>
+                            <div class="btn-plus center">
+                                <button class="centre">+</button>
+                            </div>
+                        </div>
+                        <div class="producto-btn center">
+                            <button class="input-enviar">Añadir</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex item-producto gap-producto flex-column-producto">
+                <div class="producto-img center">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
+                </div>
+                <div class="producto-inf flex flex-column gap-producto-2">
+                    <div class="producto-name">
+                        <h2>aborigen5</h2>
+                    </div>
+                    <div class="producto-precio">
+                        <p>PEN <span class="precio">7.50</span></p>
+                    </div>
+                    <div class="producto-formato grid grid-template-column-3">
+                        <button id="btn1" class="button button-opacity" selected>unid.</button>
+                        <button id="btn2" class="button">6 unid.</button>
+                        <button id="btn3" class="button">pack 24</button>
+                        <button id="btn4" class="button">30 l</button>
+                        <button id="btn5" class="button">50 l</button>
+                    </div>
+                    <div class="flex gap-producto-3 flex-column-producto-2">
+                        <div class="flex gap-producto-4">
+                            <div class="btn-minus center">
+                                <button class="center">-</button>
+                            </div>
+                            <div class="producto-cantidad center">
+                                <p>1</p>
+                            </div>
+                            <div class="btn-plus center">
+                                <button class="centre">+</button>
+                            </div>
+                        </div>
+                        <div class="producto-btn center">
+                            <button class="input-enviar">Añadir</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex item-producto gap-producto flex-column-producto">
+                <div class="producto-img center">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
+                </div>
+                <div class="producto-inf flex flex-column gap-producto-2">
+                    <div class="producto-name">
+                        <h2>aborigen6</h2>
+                    </div>
+                    <div class="producto-precio">
+                        <p>PEN <span class="precio">7.50</span></p>
+                    </div>
+                    <div class="producto-formato grid grid-template-column-3">
+                        <button id="btn1" class="button button-opacity" selected>unid.</button>
+                        <button id="btn2" class="button">6 unid.</button>
+                        <button id="btn3" class="button">pack 24</button>
+                        <button id="btn4" class="button">30 l</button>
+                        <button id="btn5" class="button">50 l</button>
+                    </div>
+                    <div class="flex gap-producto-3 flex-column-producto-2">
+                        <div class="flex gap-producto-4">
+                            <div class="btn-minus center">
+                                <button class="center">-</button>
+                            </div>
+                            <div class="producto-cantidad center">
+                                <p>1</p>
+                            </div>
+                            <div class="btn-plus center">
+                                <button class="centre">+</button>
+                            </div>
+                        </div>
+                        <div class="producto-btn center">
+                            <button class="input-enviar">Añadir</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
