--- a/producto/craft-beer/craft-beer.html
+++ b/producto/craft-beer/craft-beer.html
@@ -45,7 +45,7 @@
                         <div class="flex gap-1 btns">
                             <div id="minus">-</div>
                             <div id="cantidad">1</div>
-                            <div id="plus">♣</div>
+                            <div id="plus">+</div>
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                         <div class="flex gap-1 btns">
                             <div id="minus">-</div>
                             <div id="cantidad">1</div>
-                            <div id="plus">♣</div>
+                            <div id="plus">+</div>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         <div class="flex gap-1 btns">
                             <div id="minus">-</div>
                             <div id="cantidad">1</div>
-                            <div id="plus">♣</div>
+                            <div id="plus">+</div>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <div class="flex gap-1 btns">
                             <div id="minus">-</div>
                             <div id="cantidad">1</div>
-                            <div id="plus">♣</div>
+                            <div id="plus">+</div>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         <div class="flex gap-1 btns">
                             <div id="minus">-</div>
                             <div id="cantidad">1</div>
-                            <div id="plus">♣</div>
+                            <div id="plus">+</div>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         <div class="flex gap-1 btns">
                             <div id="minus">-</div>
                             <div id="cantidad">1</div>
-                            <div id="plus">♣</div>
+                            <div id="plus">+</div>
                         </div>
                     </div>
                 </div>
