--- a/producto/craft-beer/craft-beer.html
+++ b/producto/craft-beer/craft-beer.html
@@ -189,7 +189,11 @@
         }
 
 
+        // let date = new Date().toLocaleDateString();
+        // let hour = new Date();
+        // let time = hour.getHours().toString().padStart(2,'0')+":"+hour.getMinutes().toString().padStart(2,'0')+":"+hour.getSeconds().toString().padStart(2,'0')
 
+        // console.log(date, time );
     </script>
 </body>
 </html>
